<resources>
    <string name="app_name">SnapUp_Android</string>
    <string name="title_activity_view_order">viewOrderActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_view_info">viewScheduleActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email/Phone Number</string>
    <string name="action_register">register</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="edit_schedule">"编辑订单"</string>
    <string name="search1">始发站：</string>
    <string name="search2">终点站：</string>
    <string name="search3">时间：</string>
    <string name="search4">座位：</string>
    <string name="search">搜索订单</string>
    <string name="buy">提交订单</string>
    <string name="register_mail">手机/邮箱<font color='#FF0000'>*</font></string>
    <string name="register_password">密码<font color='#FF0000'>*</font></string>
    <string name="register_identity">身份证号</string>
    <string name="register_nickname">昵称</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_feedback">feedbackActivity</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="password_login">密码：</string>
    <string name="username_login">用户名：</string>
</resources>