<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/start_Station_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/search1"
                android:padding="15dp"/>

            <org.angmarch.views.NiceSpinner
                android:id="@+id/start_Station"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/terminus_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/search2"
                android:padding="15dp"/>
            <org.angmarch.views.NiceSpinner
                android:id="@+id/terminus"
                android:layout_marginTop="10dp"
                android:layout_width="250dp"
                android:layout_height="60dp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/time_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/search3"
                android:padding="15dp"/>

            <org.angmarch.views.NiceSpinner
                android:id="@+id/time"
                android:layout_marginTop="10dp"
                android:layout_width="250dp"
                android:layout_height="60dp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seat_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/search4"
                android:textSize="15dp" />

            <org.angmarch.views.NiceSpinner
                android:id="@+id/seat_kind"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="0dp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="4dp">


    </com.google.android.material.card.MaterialCardView>

</LinearLayout>