<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.RegisterActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginBottom="247dp"
        android:text="Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="203dp"
        android:layout_height="38dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="335dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="59dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="59dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="59dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="89dp"
        android:layout_height="38dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:text="@string/register_name"
        app:layout_constraintBottom_toBottomOf="@+id/editText1"
        app:layout_constraintEnd_toStartOf="@+id/editText1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText1"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="89dp"
        android:layout_height="38dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:text="@string/register_password"
        app:layout_constraintBottom_toBottomOf="@+id/editText2"
        app:layout_constraintEnd_toStartOf="@+id/editText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="89dp"
        android:layout_height="38dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:text="@string/register_nickname"
        app:layout_constraintBottom_toBottomOf="@+id/editText3"
        app:layout_constraintEnd_toStartOf="@+id/editText3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="89dp"
        android:layout_height="38dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:text="@string/register_identity"
        app:layout_constraintBottom_toBottomOf="@+id/editText4"
        app:layout_constraintEnd_toStartOf="@+id/editText4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText4"
        tools:ignore="MissingConstraints" />




</androidx.constraintlayout.widget.ConstraintLayout>